--- a/styles/index.scss
+++ b/styles/index.scss
@@ -1,4 +1,4 @@
-// @import 'breakpoints';
+@import "breakpoints";
 @import "veriables.scss";
 @import "common.scss";
 @import "about-us.scss";
@@ -6,7 +6,7 @@
 @import "focus.scss";
 @import "footer.scss";
 @import "header.scss";
-// @import 'headline.scss';
+@import "our-collections.scss";
 // @import 'tips.scss';
 // @import 'order.scss';
 
