--- a/styles/footer.scss
+++ b/styles/footer.scss
@@ -57,12 +57,13 @@
   &__support {
     display: flex;
     flex-direction: column;
-    margin-left: 16px;
-    margin-right: 55px;
 
     & p {
-      margin: 0;
-      text-align: center;
+      //   display: flex;
+      //   margin: 0;
+      margin: 0 auto;
+      //   padding: 0;
+      //   text-align: center;
       font-weight: 500;
       font-size: 16px;
       line-height: 28px;
@@ -71,6 +72,8 @@
     }
 
     &_list {
+      margin-left: 16px;
+      margin-right: 55px;
       display: flex;
       flex-direction: row;
       justify-content: space-between;
@@ -150,7 +153,8 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
-    margin: 0 auto;
+    margin: 50px 62px 0;
+
     & i {
       background-size: 100%;
       background-repeat: no-repeat;
@@ -176,6 +180,35 @@
       width: 14px;
       height: 14px;
       background-image: url(icons/footer-pinterest.png);
+    }
+  }
+
+  &__developed {
+    background-color: $background-color-ligth-grey;
+    padding: 23px 16px 0;
+    display: flex;
+    justify-content: space-between;
+    font-family: "Raleway", sans-serif;
+    color: $text-color-grey;
+    line-height: 24px;
+
+    & p:first-child {
+      font-size: 8px;
+    }
+
+    & div {
+      display: flex;
+      align-items: center;
+      & p {
+        font-size: 9px;
+      }
+      & i {
+        display: inline-block;
+        width: 50px;
+        height: 12px;
+        background-image: url(icons/footer-logo\ brill_1\ 4.png);
+        margin-left: 4px;
+      }
     }
   }
 }
