--- a/styles/index.scss
+++ b/styles/index.scss
@@ -2,14 +2,14 @@
 @import "veriables.scss";
 @import "common.scss";
 @import "about-us.scss";
-@import "product.scss";
+@import "product-mobile.scss";
 @import "focus.scss";
 @import "footer.scss";
 @import "header.scss";
 @import "our-collections.scss";
-// @import 'tips.scss';
-// @import 'order.scss';
-
+@import "collage.scss";
+@import "product-desktop.scss";
+@import "our-collections-desktop.scss";
 * {
   box-sizing: border-box;
 }
@@ -23,7 +23,7 @@ html {
 
 .page {
   width: 100%;
-  overflow-x: hidden;
+  overflow: hidden;
 
   //   @include for-large-up {
   //     max-width: 1200px;
