--- a/style.css
+++ b/style.css
@@ -328,10 +328,15 @@
 .footer {
   margin-top: 80px;
   width: 100%;
-  height: 750px;
+  height: 790px;
   display: flex;
   flex-direction: column;
   background-color: #635859;
+}
+@media screen and (min-width: 376px) {
+  .footer {
+    display: none;
+  }
 }
 .footer__logo {
   margin-top: 35px;
@@ -873,6 +878,106 @@
   right: 138px;
   color: #635859;
   white-space: nowrap;
+}
+
+.footer-desktop {
+  display: flex;
+  flex-direction: column;
+  background-color: #635859;
+  height: 404px;
+  margin-top: 146px;
+  position: relative;
+}
+@media screen and (max-width: 375px) {
+  .footer-desktop {
+    display: none;
+  }
+}
+.footer-desktop__upper {
+  display: flex;
+  flex-direction: row;
+  padding: 96px 0 96px 150px;
+}
+.footer-desktop__upper div:not(:first-child) {
+  margin-left: 90px;
+}
+.footer-desktop__upper_logo {
+  background-image: url(icons/logo-footer.png);
+  display: inline-block;
+  width: 150px;
+  height: 50px;
+  background-size: 100%;
+  background-repeat: no-repeat;
+  margin-top: 20px;
+}
+.footer-desktop__upper ul {
+  list-style-type: none;
+  padding: 0;
+  font-family: "Raleway", sans-serif;
+  color: #d9dbe1;
+}
+.footer-desktop__upper ul li {
+  text-decoration: none;
+  font-size: 12px;
+  line-height: 24px;
+  padding-bottom: 8px;
+}
+.footer-desktop__upper ul li:first-child {
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 28px;
+  color: #ffffff;
+  padding-bottom: 12px;
+}
+.footer-desktop__upper_subscribe {
+  margin-left: 150px !important;
+}
+.footer-desktop__upper_subscribe-text {
+  text-align: start;
+  width: 370px;
+}
+.footer-desktop__upper_subscribe-button {
+  width: 395px;
+}
+.footer-desktop__upper_subscribe-button input:first-of-type {
+  min-width: 290px;
+}
+.footer-desktop__upper_subscribe-icons {
+  margin: 32px 0 32px 0 !important;
+}
+.footer-desktop__lower {
+  width: 100%;
+  display: flex;
+  flex-direction: row;
+  position: absolute;
+  bottom: 20px;
+  align-items: center;
+}
+.footer-desktop__lower p {
+  margin: 0 30px;
+  font-size: 12px;
+  color: #d9dbe1;
+}
+.footer-desktop__lower hr {
+  color: #f0ece3;
+  width: 42%;
+  height: 0.3px;
+}
+.footer-desktop__lower div {
+  position: absolute;
+  display: flex;
+  align-items: center;
+  bottom: 12px;
+  right: 40px;
+}
+.footer-desktop__lower div p {
+  font-size: 9px;
+}
+.footer-desktop__lower div i {
+  display: inline-block;
+  width: 50px;
+  height: 12px;
+  background-image: url(icons/footer-logo\ brill_1\ 4.png);
 }
 
 * {
