--- a/styles/footer.scss
+++ b/styles/footer.scss
@@ -1,12 +1,14 @@
 .footer {
   margin-top: 80px;
   width: 100%;
-  height: 750px;
+  height: 790px;
   display: flex;
   flex-direction: column;
-  //   justify-content: center;
-  //   align-items: center;
   background-color: $background-color-ligth-grey;
+
+  @include for-large-up {
+    display: none;
+  }
 
   &__logo {
     margin-top: 35px;
@@ -59,11 +61,8 @@
     flex-direction: column;
 
     & p {
-      //   display: flex;
-      //   margin: 0;
       margin: 0 auto;
-      //   padding: 0;
-      //   text-align: center;
+
       font-weight: 500;
       font-size: 16px;
       line-height: 28px;
